[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "new-york-taxi-fare"
version = "0.0.1"
description = "New York taxi fare prediction based on location and time."
authors = [
  { name = "Kristof Nemeth" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["new-york-taxi-fare"]
force_sort_within_sections = true
